cmake_minimum_required(VERSION 3.20)
project(NAI_C)

set(CMAKE_CXX_STANDARD 14)

add_executable(NAI_C main.cpp wykłady/wyk1/hill_climbing.h wykłady/wyk2/tabu_search.h zadania/zad1/lab1.h zadania/zad2/lab2.h zadania/zad1/lab1.cpp zadania/zad2/lab2.cpp wykłady/wyk1/hill_climbing.cpp wykłady/wyk2/tabu_search.cpp helpers.h zadania/zad2/functions/Beale/beale.cpp zadania/zad2/functions/Beale/beale.h zadania/zad2/functions/Booth/booth.cpp zadania/zad2/functions/Booth/booth.h zadania/zad2/functions/HimmelBlau/himmelBlau.cpp zadania/zad2/functions/HimmelBlau/himmelBlau.h wykłady/wyk3/sa.cpp wykłady/wyk3/sa.h)
