cmake_minimum_required(VERSION 3.20)
project(NAI_C)

set(CMAKE_CXX_STANDARD 14)

add_executable(NAI_C main.cpp wykłady/wyk1/hill_climbing.h wykłady/wyk2/tabu_search.h zadania/zad1/lab1.h zadania/zad2/lab2.h zadania/zad1/lab1.cpp zadania/zad2/lab2.cpp wykłady/wyk1/hill_climbing.cpp wykłady/wyk2/tabu_search.cpp helpers.h zadania/functions/Beale/beale.cpp zadania/functions/Beale/beale.h zadania/functions/Booth/booth.cpp zadania/functions/Booth/booth.h zadania/functions/HimmelBlau/himmelBlau.cpp zadania/functions/HimmelBlau/himmelBlau.h wykłady/wyk3/sa.cpp wykłady/wyk3/sa.h zadania/zad3/lab3.cpp zadania/zad3/lab3.h zadania/functions/funcControler.cpp zadania/functions/funcControler.h)
